      such a changelog will cause a warning from dpkg-parsehchangelog the
      next time debchange is used with it) (Closes: #475578)
    + Correctly handle control files containing comments when checking
      for NMUs (Closes: #475750)
    + Fix a side-effect of the automagic NMU detection functionality which
      could lead to a spurious stanza being added to the end of the changelog
  * debcommit: Modify the "strip message" functionality so that:
    - Changelog lines beginning with any of *, + or - are considered to
      indicate a "change" for the purposes of deciding whether to strip 
      the message
    - When trimming leading whitespace on continuation lines, only spaces 
      and tabs are considered rather than line breaks (Closes: #475337)
  * debdiff:
    + Make the diffstat header for comparisons between two Debian revisions
      the same as that between two upstream versions
    + Normalise directory names in all file headers within a diff, not just
      the first
  * debian/control: Suggest instead of Recommending gnuplot and
    cvs-buildpackage
  * mergechanges:
    + Update for the new .changes format introduced with dpkg 1.14.17:
      - Handle Checksums-Sha(1|256) (Closes: #475957)
      - Only allow .changes files with the same Format to be merged
      - Reject .changes files with unsupported Formats or Checksums fields
  * rmadison: Allow custom shorthand URLs to be defined (Closes: #472922)
  * uscan: Allow a particular upstream release to be downloaded rather than
    the most recent (assuming it is in the list retrieved by the watch file)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 09 Apr 2008 18:39:33 +0100

devscripts (2.10.25) unstable; urgency=low

  [ Adam D. Barratt ]
  * debchange: Escape arguments to --local (Closes: #475034)
  * debdiff: Ensure arguments to --exclude are properly quoted in case they
    contain shell meta-characters (Closes: #475075)
  * debsign: